force-app/main/default/objects/Topic_Measures__c/Topic_Measures__c.object-meta.xml
<CustomObject>
    <label>Topic Measures</label>
    <nameField>
        <label>Measure</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topic Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>