force-app/main/default/objects/Topic_Measures__c/fields/Measure_Details__c.field-meta.xml
<CustomField>
    <fullName>Measure_Details__c</fullName>
    <label>Measure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>